--- a/data.html
+++ b/data.html
@@ -1,90 +1,115 @@
 <head>
 
-  <meta charset="UTF-8">
-  <title>Sign-Up Today!</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width = device=width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-  <!-- Bootstrap -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <title>Sign-Up Today!</title>
+
+    <!--Scripts-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <script type="text/javascript" src="assets/js/script.js"></script>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+    <link rel="icon" href="assets/images/dataLogo.png">
 
 </head>
 
 <body>
 
-  <div class="container">
-
-    <br>
+<div class="container-fluid">
 
     <!-- Jumbotron -->
-    <div class="jumbotron" style="color:white; background-color: black;">
-      <h1 class="text-center">Employee Data Management
-      </h1>
-      <h3 class="text-center">A comprehensive Directory of Emloyee Billable Hours</h3>
-    </div>
-    <div class="row">
-        <div class="col-lg-6">
-	        <div class="panel panel-primary">
-	          <div class="panel-heading">
-		          <h3 class="panel-title">Current Employees</h3>
-	          </div>
-	           <div class="panel-body">
-	            	<table class="table">
-	            		<thead>
-	            			<tr>
-	            				<th>Employee Name</th>
-	            				<th>Role</th>
-	            				<th>Start Date</th>
-	            				<th>Months Worked</th>
-	            				<th>Monthly Rate ($)</th>
-	            				<th>Total Billed ($)</th>
-	            			</tr>
-	            		</thead>
-	            	</table>
-	           </div>
-	          
-	        </div>
-      </div>
+    <div class="jumbotron" style="color:white; background-color: black;" id="jumboTron">
+        <h1 class="text-center display-3">Employee Data Management</h1>
+
+        <h2 class="text-center display-4">A comprehensive Directory of Employee Billable Hours</h2>
     </div>
 
     <div class="row">
+        <div class="col-lg-12">
+            <div class="panel panel-primary" id="currentEmployees">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Current Employees</h3>
+                </div>
+                <div class="panel-body">
+                    <table class="table">
+                        <thead>
+                        <tr>
+                            <th>Employee Name</th>
+                            <th>Role</th>
+                            <th>Start Date</th>
+                            <th>Months Worked</th>
+                            <th>Monthly Rate ($)</th>
+                            <th>Total Billed ($)</th>
+                        </tr>
+                        </thead>
+                    </table>
+                </div>
 
-
-      <!-- Sign-Up Panel-->
-      <div class="col-lg-6">
-        <div class="panel panel-primary">
-          <div class="panel-heading">
-            <h3 class="panel-title">New Member Sign-Up</h3>
-          </div>
-          <div class="panel-body">
-
-
-
-            <!-- Sign-up Form (note the various input "types")-->
-            <form role="form">
-              <div class="form-group">
-                <label for="name-input">Name:</label>
-                <input class="form-control" id="name-input" type="text">
-              </div>
-              <div class="form-group">
-                <label for="email-input">Email:</label>
-                <input class="form-control" id="email-input" type="email">
-              </div>
-              <div class="form-group">
-                <label for="age-input">Age:</label>
-                <input class="form-control" id="age-input" type="number">
-              </div>
-              <div class="form-group">
-                <label for="comment-input">How did you hear about us?</label>
-                <textarea class="form-control" id="comment-input" rows="5"></textarea>
-              </div>
-              <button class="btn btn-default" id="add-user" type="submit">Submit</button>
-            </form>
-          </div>
+            </div>
         </div>
-      </div>
+    </div>
 
-      <!-- Most Recent Member Panel -->
-      
+    <div class="row">
+
+        <!-- Sign-Up Panel-->
+        <div class="col-lg-6">
+            <div class="panel panel-primary" id="memberSignUp">
+                <div class="panel-heading">
+                    <h3 class="panel-title">New Member Sign-Up</h3>
+                </div>
+                <div class="panel-body">
+
+
+                    <!-- Sign-up Form (note the various input "types")-->
+                    <form role="form">
+                        <div class="form-group">
+                            <label for="name-input">Name:</label>
+                            <input class="form-control" id="name-input" type="text">
+                        </div>
+                        <div class="form-group">
+                            <label for="email-input">Email:</label>
+                            <input class="form-control" id="email-input" type="email">
+                        </div>
+                        <div class="form-group">
+                            <label for="age-input">Age:</label>
+                            <input class="form-control" id="age-input" type="number">
+                        </div>
+                        <div class="form-group">
+                            <label for="comment-input">How did you hear about us?</label>
+                            <textarea class="form-control" id="comment-input" rows="5"></textarea>
+                        </div>
+                        <button class="btn btn-default" id="add-user" type="submit">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <!-- Most Recent Member Panel -->
+
+        <div class="col-lg-6">
+            <div class="panel panel-primary" id="recentMembers">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Most Recent Members</h3>
+                </div>
+                <div class="panel-body">
+
+                </div>
+
+            </div>
+
+        </div>
+
 
     </div>
 
-  </div>
+</div>
