--- a/data.html
+++ b/data.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
+    <!-- Firebase Reference -->
+    <script src="https://www.gstatic.com/firebasejs/3.7.1/firebase.js"></script>
+
 
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 
@@ -81,13 +84,15 @@
                             <input class="form-control" id="email-input" type="email">
                         </div>
                         <div class="form-group">
-                            <label for="age-input">Age:</label>
-                            <input class="form-control" id="age-input" type="number">
+                            <label for="startDate-input">Start Date(DD/MM/YYYY - ex 01/01/2000):</label>
+                            <input class="form-control" id="startDate-input">
                         </div>
+
                         <div class="form-group">
-                            <label for="comment-input">How did you hear about us?</label>
-                            <textarea class="form-control" id="comment-input" rows="5"></textarea>
+                            <label for="monthly-input">Monthly Rate:</label>
+                            <input class="form-control" id="monthly-input">
                         </div>
+
                         <button class="btn btn-default" id="add-user" type="submit">Submit</button>
                     </form>
                 </div>
@@ -101,10 +106,13 @@
                 <div class="panel-heading">
                     <h3 class="panel-title">Most Recent Members</h3>
                 </div>
-                <div class="panel-body">
 
+                <div class="panel-body" id="recent-member">
+                    <h2 id="name-display"></h2>
+                    <h4 id="email-display"></h4>
+                    <h4 id="startDate-display"></h4>
+                    <p id="monthly-display"></p>
                 </div>
-
             </div>
 
         </div>
