--- a/data.html
+++ b/data.html
@@ -108,10 +108,10 @@
                 </div>
 
                 <div class="panel-body" id="recent-member">
-                    <h2 id="name-display"></h2>
-                    <h4 id="email-display"></h4>
-                    <h4 id="startDate-display"></h4>
-                    <p id="monthly-display"></p>
+                    <h1 class="display-2" id="name-display"></h1>
+                    <h1 class="display-3" id="email-display"></h1>
+                    <h1 class="display-3" id="startDate-display"></h1>
+                    <h1 class="display-4" id="monthly-display"></h1>
                 </div>
             </div>
 
